# tcp-qliq

./: CMakeLists.txt  Dockerfile  README.md  build.sh  conanfile.py  test.sh
app/client/: CMakeLists.txt  main.cpp
app/daemon/: CMakeLists.txt  main.cpp
app/daemon/include/: daemonize.hpp  routines.hpp
app/daemon/source/: daemonize.cpp  routines.cpp
client/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  easy_shutdown.cpp  easy_shutdown.hpp
common/include/: net.hpp
common/include/clem/: clem.hpp
common/source/: CMakeLists.txt
common/source/clem/: clem.cpp
common/source/net/: net.cpp
daemon/: CMakeLists.txt  main.cpp
daemon/include/: deamonize.hpp  routines.hpp
daemon/source/: deamonize.cpp  routines.cpp
lib/: CMakeLists.txt
lib/include/net_routines/: net_routines.hpp
lib/source/net_routines/: net_routines.cpp
